--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "node src/practice.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master",
-    "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js"
+    "test": "mocha --require test/setup.js"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +17,9 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
-    "knex": "^0.16.3",
+    "knex": "^0.16.5",
     "morgan": "^1.9.1",
-    "pg": "^7.8.0",
+    "pg": "^7.12.1",
     "postgrator-cli": "^3.1.0",
     "uuid": "^3.3.3",
     "valid-url": "^1.0.9",
